--- a/master.tex
+++ b/master.tex
@@ -1186,9 +1186,10 @@ mit einer Belegung
 \end{elabeling}
 \end{defn}
 \begin{prop}
-Die Logiken $\mathcal{L}+\Upsilon+\#$ und $\mathcal{L}+\Upsilon+\exists^{=}$
-und $\mathcal{L}+\Upsilon+\exists^{\geqslant}$ sind äquivalent, modulo
-eines festen Zuwachses in $\left\Vert \varphi\right\Vert $ und $\left|\mathrm{var}\left(\varphi\right)\right|$.\end{prop}
+\label{prop:counting-equal}Die Logiken $\mathcal{L}+\Upsilon+\#$
+und $\mathcal{L}+\Upsilon+\exists^{=}$ und $\mathcal{L}+\Upsilon+\exists^{\geqslant}$
+sind äquivalent, modulo eines festen Zuwachses in $\left\Vert \varphi\right\Vert $
+und $\left|\mathrm{var}\left(\varphi\right)\right|$.\end{prop}
 \begin{proof}
 Jede $\left(\mathcal{L}+\Upsilon+\#\right)\left[\sigma\right]$-Formel
 $\varphi$ ist äquivalent zu einer $\left(\mathcal{L}+\Upsilon+\exists^{=}\right)\left[\sigma\right]$-Formel
@@ -2226,7 +2227,7 @@ Die neue Schaltkreisfamilie ist $\mathcal{K}$-uniform (mit $\mathcal{K}\supseteq
 wenn sowohl die Konstruktion für $\mathcal{L}$ als auch das Orakel
 $\mathcal{K}$-uniform sind.
 \begin{lem}
-\label{lem:fo-ord-circuit}Sei $\mathcal{L}$ eine Logik, $\mathbb{B}$
+\label{lem:oracle-circuit}Sei $\mathcal{L}$ eine Logik, $\mathbb{B}$
 eine boolesche Basis und $\mathcal{K}\supseteq\mathrm{LOGSPACE}$
 eine Komplexitätsklasse, so dass für jede $\mathcal{L}\left[\sigma\right]$-Formel
 eine symmetrische $\mathcal{K}$-uniforme $\left(\sigma,\mathbb{B}\right)$-Schaltkreisfamilie
@@ -2377,42 +2378,55 @@ $\mathcal{K}$-uniforme Schaltkreisfamilie mit Tiefe $t'\left(n\right)=t\left(2n+
 und Größe $s'\left(n\right)=s\left(2n+1\right)$, die $q$ berechnet.
 \end{proof}
 
-\section{Zählquantoren}
+\section{Logiken mit Zählquantoren}
 
 Wir betrachten die Logik $\mathcal{L}+\Upsilon+C$, und weisen nach,
-dass die Konstruktion von Lemma \ref{lem:fo-ord-circuit} und Lemma
-\ref{lem:fo-ord-circuit} angepasst werden kann, indem Majority-Gates
-hinzugefügt werden.
+dass die Konstruktion von Lemma \ref{lem:oracle-circuit} angepasst
+werden kann, indem Majority-Gates hinzugefügt werden.
+\begin{lem}
+\label{lem:counting-circuit}Sei $\mathcal{L}$ eine Logik, $\mathbb{B}$
+eine boolesche Basis und $\mathcal{K}\supseteq\mathrm{LOGSPACE}$
+eine Komplexitätsklasse, so dass für jede $\mathcal{L}\left[\sigma\right]$-Formel
+eine symmetrische, $\mathcal{K}$-uniforme $\left(\sigma,\mathbb{B}\right)$-Schaltkreisfamilie
+mit $t\left(n\right)$-Tiefe und $s\left(n\right)$-Größe (mit $s\mathrm{\left(n\right)\in\mathrm{poly}\left(n\right)}$)
+existiert, die die gleiche Anfrage beschreibt.
+
+Sei $\eta$ eine von $\sigma$ disjunkte Signatur und $\Upsilon$
+ein $\mathcal{K}$-uniformes $\eta$-Orakel.
+
+Dann existiert für jede $\left(\mathcal{L}+\Upsilon+C\right)\left[\sigma\right]$
+eine ebensolche $\left(\sigma,\mathbb{B}\cup\left\{ \mathtt{MAJ}\right\} \right)$-Schaltkreisfamilie
+mit der Tiefe $t'\left(n\right)\coloneqq t\left(2n+1\right)+\left\Vert \varphi\right\Vert $
+und der folgenden Größe: 
 \[
-\mathrm{FO}+C\subseteq\left(\mathrm{SAC}^{0}+\mathbf{MAJ}\right)^{\mathrm{LOGSPACE}}
+s'\left(n\right)\coloneqq s\left(2n+1\right)+\left(2n+\left(2n+1\right)^{\mathrm{var}\left(\varphi\right)}\right)\left\Vert \varphi\right\Vert \in\mathrm{poly}\left(n\right)
 \]
 
-\begin{lem}
-\label{lem:fo+c}Jede $\left(\mathrm{FO}+\exists^{\geqslant}\right)\left[\sigma\right]$-Formel
-$\varphi$ definiert eine $\sigma$-Anfrage $q$, die von einer symmetrischen,
-$\mathrm{LOGSPACE}$-uniformen $\left(\sigma,\mathbb{B}_{\mathrm{maj}}\right)$-Schaltkreisfamilie
-$\left(\mathcal{C}_{n}\right)_{n\in\mathbb{N}}$ mit konstanter $\left\Vert \varphi\right\Vert $-Tiefe
-und polynomieller $\left\Vert \varphi\right\Vert \cdot\left(2n+1\right)^{\mathtt{MF}\left(\varphi\right)}$-Größe
-berechnet wird.\end{lem}
+\end{lem}
+Insbesondere folgt aus der Kombination mit Lemma \ref{lem:fo-circuit}
+und Lemma \ref{lem:oracle-circuit}:
+
+\begin{eqnarray*}
+\mathrm{FO}+\mathbf{BIT}+C & \subseteq & \left(\mathrm{SAC}^{0}+\mathbf{MAJ}\right)^{\mathrm{LOGSPACE}}\\
+\mathrm{FO}+\mathbf{ARB}+C & \subseteq & \left(\mathrm{SAC}^{0}+\mathbf{MAJ}\right)^{P/\mathrm{poly}}
+\end{eqnarray*}
+Wir werden in diesem Fall konkret mit $\exists^{\geqslant}$-Quantoren
+arbeiten, denn per Satz \ref{prop:counting-equal} sind diese gleich
+ausdrucksstark mit $\exists^{=}$-Quantoren und $\#$-Termen.
 \begin{proof}
-Sei $\varphi$ eine $k$-stellige $\left(\mathrm{FO}+\exists^{\geqslant}\right)\left[\sigma\right]$-Formel.
-Der $\left(\sigma\cup\left\{ \leqslant\right\} ,\mathbb{B}_{\mathrm{maj}}\right)$-Schaltkreis
-$\mathcal{C}_{2n+1}^{\varphi}$ über dem Universum $U'\coloneqq\left[1,2n+1\right]=\left[1,n\right]\uplus\rho\left[0,n\right]$
-wird nach dem gleichen Schema wie in Lemma \ref{lem:fo-ord-circuit},
-wobei ein neuer Fall hinzukommt.
+Sei $\varphi$ eine $\left(\mathcal{L}+\Upsilon+\exists^{\geqslant}\right)\left[\sigma\right]$-Formel.
+Wir gehen analog zu Lemma \ref{lem:oracle-circuit} für $\mathcal{L}+\Upsilon$
+vor, erweitern aber die Konstruktion aus der Voraussetzung um den
+folgenden Schritt:
 
-(Zur Erinnerung: $\rho:\left[0,n\right]\rightarrow\left[n+1,2n+1\right]$
-ist die Verschiebung des Universums von $\Upsilon\left(n\right)$.)
-
-Falls $\varphi\left(\bar{x}\right)=\exists^{\geqslant x_{i}}y_{j}\psi\left(\bar{y}\right)$,
-so sei $\mathcal{C}_{2n+1}^{\psi}$ der $k$-stellige Schaltkreis
-für die Formel $\psi$:
+Falls $\varphi\left(\bar{x}\right)=\exists^{\geqslant x_{i}}y_{j}\psi\left(\bar{y}\right)$
+mit $\bar{x}\in\mathbf{var}^{k}$, so sei $\mathcal{C}_{2n+1}^{\psi}$
+der $k$-stellige Schaltkreis für die Formel $\psi$:
 \[
 \mathcal{C}_{2n+1}^{\psi}=\left(G_{\psi},W_{\psi},\Sigma_{\psi},\Omega_{\psi},U'\right)
 \]
+Wir erzeugen den folgenden Schaltkreis $\mathcal{C}_{2n+1}^{\varphi}$:
 
-\begin{description}
-\item [{Schaltkreis:}] 
 \begin{eqnarray*}
 \mathcal{C}_{2n+1}^{\varphi} & \coloneqq & \left(G,W,\Sigma,\Omega,U'\right)
 \end{eqnarray*}
@@ -2482,6 +2496,7 @@ W_{\mathrm{pad}} & = & \left\{ \left(0_{j},g_{\bar{t}}\right)\mid\bar{t}\in U'^{
 \overset{n+k=2\rho^{-1}t_{i}}{\overbrace{x_{1}\cdots x_{n}\underset{k=2\rho^{-1}t_{i}-n}{\underbrace{\mathbf{0}\mathbf{0}\cdots\mathbf{0}}}}} &  & \overset{n+k'=2n-2\rho^{-1}t_{i}}{\overbrace{x_{1}\cdots x_{n}\underset{k'=n-2\rho^{-1}t_{i}}{\underbrace{\mathbf{1}\mathbf{1}\cdots\mathbf{1}}}}}
 \end{eqnarray*}
 
+\begin{description}
 \item [{Symmetrie:}] Der neue Schaltkreis ist offensichtlich nicht symmetrisch
 bezüglich $\mathrm{Sym}_{U'}$, denn die Anzahl der konstanten Vorgänger
 von $g_{\bar{t}}$ hängt von dem Wert $t_{i}$ ab. Allerdings ist
@@ -2539,20 +2554,17 @@ Das gleiche gilt analog für die Kanten $\left(\hat{\pi}1_{j},\hat{\pi}g_{\bar{t
 per Definition gegeben.
 \end{enumerate}
 \end{enumerate}
-\begin{description}
 \item [{Größe:}] 
 \begin{eqnarray*}
 T\left(\mathcal{C}_{2n+1}^{\varphi}\right) & \leqslant & 1+T\left(\mathcal{C}_{2n+1}^{\psi}\right)\\
- & \overset{\mathrm{Ann.}}{\leqslant} & 1+\left\Vert \psi\right\Vert \leqslant\left\Vert \varphi\right\Vert 
+ & \overset{\mathrm{Ann.}}{\leqslant} & 1+\left\Vert \psi\right\Vert +t\left(2n+1\right)\leqslant\left\Vert \varphi\right\Vert +t\left(2n+1\right)
 \end{eqnarray*}
 \begin{eqnarray*}
 \left|\mathcal{C}_{2n+1}^{\varphi}\right| & \leqslant & \left(2n+1\right)^{k}+2n+\left|\mathcal{C}_{2n+1}^{\psi}\right|\\
- & \overset{\mathrm{Ann.}}{\leqslant} & \left(2n+1\right)^{k}+2n+\left\Vert \psi\right\Vert \left(2n+1\right)^{\mathtt{MF}\left(\psi\right)}\\
- &  & \left(2n+1\right)^{\mathtt{MF}\left(\varphi\right)}+\left\Vert \psi\right\Vert \left(2n+1\right)^{\mathtt{MF}\left(\varphi\right)}\\
- & \leqslant & \left\Vert \varphi\right\Vert \left(2n+1\right)^{\mathtt{MF}\left(\varphi\right)}
+ & \overset{\mathrm{Ann.}}{\leqslant} & \left(2n+1\right)^{k}+2n+\left\Vert \psi\right\Vert \left(\left(2n+1\right)^{\mathrm{var}\left(\varphi\right)}+2n\right)+s\left(2n+1\right)\\
+ & \leqslant & \left\Vert \varphi\right\Vert \left(\left(2n+1\right)^{\mathrm{var}\left(\varphi\right)}+2n\right)+s\left(2n+1\right)
 \end{eqnarray*}
 
-\end{description}
 \end{description}
 Nach der Erzeugung von $\mathcal{C}_{2n+1}^{\varphi}$ wird der Schaltkreis
 auf die bereits beschriebene Weise zu $\dot{\mathcal{C}_{n}^{\varphi}}$
@@ -2563,7 +2575,7 @@ keine nicht-konstanten Inputs hinzu, so dass sich hierbei nichts ändert.
 Da der Schaltkreis $\mathcal{C}_{2n+1}^{\varphi}$ für jede Permutation
 $\pi\cup\mathbf{id}_{\left[n+1,2n+1\right]}$ mit $\pi\in\mathrm{Sym}_{\left[1,n\right]}$
 einen Automorphismus besitzt, ist der Schaltkreis $\dot{\mathcal{C}_{n}^{\varphi}}$
-symmetrisch (siehe Lemma \ref{lem:fo-ord-circuit}).
+symmetrisch (siehe Lemma \ref{lem:oracle-circuit}).
 \end{proof}
 \pagebreak{}
 
@@ -2571,14 +2583,7 @@ symmetrisch (siehe Lemma \ref{lem:fo-ord-circuit}).
 \section{Fixpunktlogik}
 
 In diesem Abschnitt werden wir die bereits gezeigten Konstruktionen
-auf Fixpunktlogik erweitern, die durch Schaltkreise beliebiger Tiefe
-beschrieben werden kann:
-\begin{eqnarray*}
-\mathrm{LFP}+\mathbf{ORD} & \subseteq & \mathrm{SBC}^{P}\\
-\mathrm{LFP}+\mathbf{ARB} & \subseteq & \mathrm{SBC}^{P/\mathrm{poly}}\\
-\mathrm{LFP}+C & \subseteq & \left(\mathrm{SBC}+\mathbf{MAJ}\right)^{P}
-\end{eqnarray*}
-
+auf Fixpunktlogik erweitern.
 
 
 \subsection{Eine Sequenz von erststufigen Formeln}
@@ -2759,10 +2764,12 @@ $\bar{\mathcal{C}^{\varphi}}$ mit $m+n^{k}\left(t+1\right)$-Tiefe
 und $1+n^{k}\left(s\left(n\right)+m\right)$-Größe, so dass $q_{\bar{\mathcal{C}^{\varphi}}}\left(\mathfrak{A}\right)=q_{\varphi}\left(\mathfrak{A}\right)$
 für alle $\mathfrak{A}\in\mathbf{FIN}\left(\sigma\right)$ gilt.
 \end{lem}
-In Kombination mit dem Rest dieses Kapitels entsteht daraus eine Konstruktion
-für $\mathrm{LFP}+\mathbf{ORD}$ (mit Lemma \ref{lem:fo-ord-circuit})
-und $\mathrm{LFP}+\mathbf{ARB}$ (mit Lemma \ref{lem:fo+arb}), denn
-$\mathrm{LOGSPACE}\subseteq P$ (siehe Abschnitt 4.3 in \cite{arora-barak}).
+In Kombination mit dem Rest dieses Kapitels folgt dann:
+\begin{eqnarray*}
+\mathrm{LFP}+\mathbf{ORD} & \subseteq & \mathrm{SBC}^{P}\\
+\mathrm{LFP}+\mathbf{ARB} & \subseteq & \mathrm{SBC}^{P/\mathrm{poly}}
+\end{eqnarray*}
+
 \begin{proof}
 Per Definition existiert bereits eine $\left(\sigma,\mathbb{B}\right)$-Schaltkreisfamilie
 für jede $\mathcal{L}\left[\sigma\right]$-Formel.
@@ -2913,7 +2920,7 @@ erhalten.
 Wir haben im letzten Abschnitt eine Normalform vorausgesetzt, die
 aber nur für die Logiken $\mathrm{LFP}$ und $\mathrm{LFP}+\Upsilon$
 nachgewiesen ist. Den Spezialfall $\mathrm{LFP}+C$ betrachten wir
-gesondert, und weisen nach, dass die Konstruktion aus Lemma \ref{lem:fo+c}
+gesondert, und weisen nach, dass die Konstruktion aus Lemma \ref{lem:counting-circuit}
 mit dem Fixpunkt-Operator kombinierbar ist.
 \begin{eqnarray*}
 \mathrm{LFP}+C & \subseteq & \left(\mathrm{SBC}+\mathbf{MAJ}\right)^{P}\\
